# agentic-ai-playground

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_gemini.py
src/crewai_lessons/l2_article_writer/: main.py  utils.py
src/crewai_lessons/notebooks/: L2_research_write_article.ipynb
