[project]
name = "crewai_lessons"
version = "0.1.0"
description = "A project demonstrating CrewAI for article research and writing."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "crewai",
    "crewai_tools",
    "langchain_community",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
